; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_slice.c_slice_dump.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_slice.c_slice_dump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32 }

@.str = private unnamed_addr constant [19 x i8] c"%sSlice State: %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_9__*, i8*)* @slice_dump to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @slice_dump(i32* %0, %struct.TYPE_9__* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_9__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_9__*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_9__* %1, %struct.TYPE_9__** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call %struct.TYPE_9__* @SLICE(i32* %8)
  store %struct.TYPE_9__* %9, %struct.TYPE_9__** %7, align 8
  %10 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %11 = call i32 @assert(%struct.TYPE_9__* %10)
  %12 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %13 = call i32 @assert(%struct.TYPE_9__* %12)
  %14 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %17 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i8* @slice_state_to_string(i32 %18)
  %20 = call i32 @fprintf(%struct.TYPE_9__* %14, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8* %15, i8* %19)
  %21 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %22 = call i32 @UNIT(%struct.TYPE_9__* %21)
  %23 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %24 = load i8*, i8** %6, align 8
  %25 = call i32 @cgroup_context_dump(i32 %22, %struct.TYPE_9__* %23, i8* %24)
  ret void
}

declare dso_local %struct.TYPE_9__* @SLICE(i32*) #1

declare dso_local i32 @assert(%struct.TYPE_9__*) #1

declare dso_local i32 @fprintf(%struct.TYPE_9__*, i8*, i8*, i8*) #1

declare dso_local i8* @slice_state_to_string(i32) #1

declare dso_local i32 @cgroup_context_dump(i32, %struct.TYPE_9__*, i8*) #1

declare dso_local i32 @UNIT(%struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
